# autoSEO

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
apps/api/: config.py  dependencies.py  main.py  requirements.txt
apps/api/models/: __init__.py  database.py  tables.py
apps/api/routers/: __init__.py  analytics.py  api_keys.py  auth.py  change_log.py  competitors.py  crawls.py  fixes.py  issues.py  keywords.py  notifications.py  sites.py  snippet.py  team.py  usage.py  webhooks.py
apps/api/schemas/: __init__.py  auth.py  crawl.py  issue.py  site.py
apps/api/services/: __init__.py  stripe_service.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/hooks/: use-auth.ts  use-data.ts
apps/web/src/lib/: api-client.ts  auth.ts  query-client.ts  supabase.ts  utils.ts
apps/web/src/pages/: AnalyticsPage.tsx  ApiKeysPage.tsx  BillingPage.tsx  CompetitorsPage.tsx  DashboardPage.tsx  (+14 more)
attached_assets/: Pasted--Complete-UI-UX-Design-System-Prompt-Apply-this-design-_1776434532292.txt  Pasted-AUTONOMOUS-SEO-AGENT-COMPLETE-BUILD-SPECIFICATION-v4-0-_1776434715173.txt  Pasted-AUTONOMOUS-SEO-AGENT-COMPLETE-BUILD-SPECIFICATION-v4-0-_1776459099861.txt  Pasted-think-like-humain-be-professionel-critical-senior-hones_1776431221021.txt
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  railway.toml
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql
workers/: __init__.py  celery_app.py
workers/tasks/: __init__.py  crawl.py  fix.py  report.py
(+4 files in other folders)
