[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.7",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "lxml>=6.0.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "stripe>=15.0.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]
